# bragi-status

./: Cargo.toml  LICENCE  README.md  TODO.md  deploy.env
config/: development.toml  testing.toml
docker/: Dockerfile  Dockerfile-dev  entrypoint.sh
src/: error.rs  lib.rs  main.rs  server.rs  settings.rs  state.rs  utils.rs
src/api/: gql.rs  mod.rs  model.rs
