[package]
name = "bragi_status"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
jq-rs = "0.4.1"
urlencoding = "1.0"
