[package]
name = "bragi-status"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.0", features = ["json"] }
jq-rs = "0.4.1"
urlencoding = "1.0"
url = "2.1.0"
snafu = "0.5"
